--- a/electro/index.html
+++ b/electro/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-		<title>RV INFORMATICA</title>
+		<title>ROHNES BRASIL BIJUTERIAS</title>
 
 		<!-- Google font -->
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
@@ -42,17 +42,16 @@
 			<div id="top-header">
 				<div class="container">
 					<ul class="header-links pull-left">
-						<li><a href="#"><i class="fa fa-phone"></i> 19 9 9484-4040</a></li>
-						<li><a href="#"><i class="fa fa-envelope-o"></i> contato@sincewebdesigner.com.br</a></li>
-						<li><a href="https://www.google.com.br/maps/dir//-22.3573521,-47.3849611/@-22.3573809,-47.3867363,909m/data=!3m2!1e3!4b1!4m2!4m1!3e2"><i class="fa fa-map-marker"></i> Seu endereço</a></li>
+						<li><a href="#"><i class="fa fa-phone"></i>3443-8639</a></li>
+						<li><a href="#"><i class="fa fa-envelope-o"></i> rohnes.brasil@hotmail.com</a></li>
+						<!-- <li><a href="https://www.google.com.br/maps/dir//-22.3573521,-47.3849611/@-22.3573809,-47.3867363,909m/data=!3m2!1e3!4b1!4m2!4m1!3e2"><i class="fa fa-map-marker"></i> Seu endereço</a></li> -->
 					</ul>
-					<ul class="header-links pull-right">
+					<!-- <ul class="header-links pull-right">
 						<li><a href="#"><i class="fa fa-dollar"></i> BRL</a></li>
-						<li><a href="#"><i class="fa fa-user-o"></i> MINHA CONTA</a></li>
+						<li><a href="#"><i class="fa fa-user-o"></i> MINHA CONTA</a></li> -->
 					</ul>
 				</div>
 			</div>
-			<!-- /TOP HEADER -->
 
 			<!-- MAIN HEADER -->
 			<div id="header">
@@ -68,9 +67,8 @@
 								</a>
 							</div>
 						</div>
-						<!-- /LOGO -->
 
-						<!-- SEARCH BAR -->
+						<!-- SEARCH BAR 
 						<div class="col-md-6">
 							<div class="header-search">
 								<form>
@@ -83,40 +81,41 @@
 									<button class="search-btn">Pesquisar</button>
 								</form>
 							</div>
-						</div>
-						<!-- /SEARCH BAR -->
+						</div> -->
 
 						<!-- ACCOUNT -->
 						<div class="col-md-3 clearfix">
 							<div class="header-ctn">
-								<!-- Wishlist -->
+								<!-- Wishlist
 								<div>
 									<a href="#">
 										<i class="fa fa-heart-o"></i>
 										<span>Lista de Desejos</span>
 										<div class="qty">2</div>
 									</a>
-								</div>
-								<!-- /Wishlist -->
+								</div> -->
 
-								<!-- Cart -->
+								<!-- Promoção -->
 								<div class="dropdown">
 									<a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
-										<i class="fa fa-shopping-cart"></i>
-										<span>Seu Carrinho</span>
+										<i class="fa fa-money"></i>
+										<span>Em Promoção</span>
 										<div class="qty">3</div>
 									</a>
 									<div class="cart-dropdown">
 										<div class="cart-list">
+
+											<!--Produtos-->
+
 											<div class="product-widget">
 												<div class="product-img">
 													<img src="./img/product01.png" alt="">
 												</div>
 												<div class="product-body">
-													<h3 class="product-name"><a href="#">Nome do seu produto RV INFORMATICA</a></h3>
-													<h4 class="product-price"><span class="qty">1x</span>$980.00</h4>
+													<h3 class="product-name"><a href="#">Par de colar com pedras</a></h3>
+													<h4 class="product-price"><span class="qty"></span>R$ 79,90</h4>
 												</div>
-												<button class="delete"><i class="fa fa-close"></i></button>
+												<!-- <button class="delete"><i class="fa fa-close"></i></button> -->
 											</div>
 
 											<div class="product-widget">
@@ -124,15 +123,28 @@
 													<img src="./img/product02.png" alt="">
 												</div>
 												<div class="product-body">
-													<h3 class="product-name"><a href="#">Nome do seu produto RV INFORMATICA</a></h3>
-													<h4 class="product-price"><span class="qty">3x</span>$980.00</h4>
+													<h3 class="product-name"><a href="#">Par de brincos (Azul)</a></h3>
+													<h4 class="product-price"><span class="qty"></span>R$ 49,90</h4>
 												</div>
-												<button class="delete"><i class="fa fa-close"></i></button>
+												<!--<button class="delete"><i class="fa fa-close"></i></button>-->
 											</div>
+
+											<div class="product-widget">
+												<div class="product-img">
+													<img src="./img/product03.png" alt="">
+												</div>
+												<div class="product-body">
+													<h3 class="product-name"><a href="#">Par de brincos (Verdes)</a></h3>
+													<h4 class="product-price"><span class="qty"></span>R$ 49,90</h4>
+												</div>
+												<!-- <button class="delete"><i class="fa fa-close"></i></button> -->
+											</div>
+
+											<!--Fim Produtos-->
 										</div>
 										<div class="cart-summary">
-											<small>3 Item(s) selecionados</small>
-											<h5>SUBTOTAL: $2940.00</h5>
+											<small>3 Item(s)</small>
+											<h5>Aviso: Promoção valida até 10/06/18</h5>
 										</div>
 										<div class="cart-btns">
 											<a href="#">Ver Carrinho</a>
@@ -140,7 +152,7 @@
 										</div>
 									</div>
 								</div>
-								<!-- /Cart -->
+								<!-- Fim Promoção -->
 
 								<!-- Menu Toogle -->
 								<div class="menu-toggle">
